--- a/public/chat.html
+++ b/public/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chat | ChatApp</title>
-    <meta name="viewport" content="width=device-width, intial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body class="chat">
@@ -53,6 +53,7 @@
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/libs/moment.js"></script>
     <script src="/js/libs/mustache.js"></script>
+    <script type="text/javascript" src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js" ></script>
   </body>
 </html>
